--- a/App_LUMINOVA/templates/compras/seguimiento.html
+++ b/App_LUMINOVA/templates/compras/seguimiento.html
@@ -1,89 +1,57 @@
 {% extends 'padre.html' %}
+{% load static %}
 
-{% block title %}Compras - Luminova{% endblock %}
+{% block title %}Seguimiento de Compras - Luminova{% endblock %}
 
 {% block sidebar_content %}
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-primary sidebar collapse border-end vh-100" style="border-top-left-radius: 25px; border-top-right-radius: 25px;">
-        <div class="position-sticky pt-4">
-            <h6 class="sidebar-heading d-flex justify-content-center align-items-center px-3 mt-4 mb-1 text-white fw-bold">
-                <span>Compras</span>
-            </h6>
-            <hr class="text-white">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_lista_oc' %}">
-                        <i class="bi bi-list-ul me-2"></i> <span class="ms-2">Listado de OC</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_desglose' %}">
-                        <i class="bi bi-box-seam-fill"></i> <span class="ms-2">Desglose de Componentes</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_seguimiento' %}">
-                        <i class="bi bi-truck me-2"></i> <span class="ms-2">Seguimiento de Compras</span>
-                    </a>
-                </li>
-                </ul>
-        </div>
-    </nav>
+    {% include 'compras/compras_sidebar.html' %}
 {% endblock %}
 
 {% block content %}
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Seguimiento de Órdenes de Compra</h1>
+</div>
 
-    <h1 class = "text-center">Seguimiento de Órdenes de Compra</h1>
-
-
-
-
-      <table class="table">
-        <thead class="table-primary rounded-top">
+<div class="table-responsive mt-3">
+    <table class="table table-hover table-sm align-middle">
+        <thead class="color-thead">
           <tr>
-            <th scope="col" class="align-middle color-thead">N°OC</th>
-            <th scope="col" class="align-middle color-thead">Estado de OC</th>
-            <th scope="col" class="align-middle color-thead">Categoría</th>
-            <th scope="col" class="align-middle color-thead">Fecha</th>
-            <th scope="col" class="align-middle color-thead">Cantidad de items</th>
-            <th scope="col" class="align-middle color-thead">Monto Total (US$$)</th>
-            <th scope="col" class="align-middle color-thead">Fecha Estimada de Entrega</th>
-            <th scope="col" class="align-middle color-thead">N°Tracking</th>
+            <th class="align-middle">N° OC</th>
+            <th class="align-middle">Estado de OC</th>
+            <th class="align-middle">Proveedor</th>
+            <th class="align-middle">Fecha Estimada de Entrega</th>
+            <th class="align-middle">N° Tracking</th>
           </tr>
         </thead>
         <tbody>
-          {% for oc in ordenes_solicitadas_list %}
+          {% for oc in ordenes_en_seguimiento %}
             <tr>
-              <td class="align-middle">{{ oc.numero_orden }}</td>
-              <td class="align-middle">{{ oc.estado.nombre }}</td>
-              <td class="align-middle">{{ oc.insumo_principal.descripcion }}</td>
-              <td class="align-middle">{{ oc.fecha_creacion|date:"d/m/Y" }}</td>
-              <td class="align-middle">{{ oc.cantidad_principal }}</td>
-              <td class="align-middle">{{ oc.total_orden_compra }}</td>
-              <td class="align-middle">{{ oc.fecha_estimada_entrega|date:"d/m/Y" }}</td>
+              <td class="align-middle">
+                  <a href="{% url 'App_LUMINOVA:compras_detalle_oc' oc.id %}">{{ oc.numero_orden }}</a>
+              </td>
+              <td class="align-middle">
+                  <span class="badge bg-success-subtle text-success-emphasis border border-success-subtle">
+                      {{ oc.get_estado_display }}
+                  </span>
+              </td>
+              <td class="align-middle">{{ oc.proveedor.nombre }}</td>
+              <td class="align-middle">{{ oc.fecha_estimada_entrega|date:"d/m/Y"|default:"No especificada" }}</td>
               <td>
                 {% if oc.numero_tracking %}
-                  <a href="{% url 'App_LUMINOVA:compras_tracking_pedido' oc.numero_orden %}">{{ oc.numero_tracking }}</a>
-
+                  <a href="{% url 'App_LUMINOVA:compras_tracking_pedido' oc.id %}" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-truck me-1"></i> {{ oc.numero_tracking }}
+                  </a>
+                {% else %}
+                  N/A
                 {% endif %}
               </td>
             </tr>
           {% empty %}
             <tr>
-              <td colspan="8" class="text-center">No hay órdenes en seguimiento.</td>
+              <td colspan="5" class="text-center fst-italic text-muted py-3">No hay órdenes en seguimiento en este momento.</td>
             </tr>
           {% endfor %}
         </tbody>
       </table>
-
-
-<style>
-    thead.rounded-top th:first-child {
-        border-top-left-radius: 10px;
-    }
-    thead.rounded-top th:last-child {
-        border-top-right-radius: 10px;
-    }
-</style>
-
-
+</div>
 {% endblock %}
