--- a/App_LUMINOVA/templates/compras/seguimiento.html
+++ b/App_LUMINOVA/templates/compras/seguimiento.html
@@ -14,13 +14,13 @@
 
 <div class="table-responsive mt-3">
     <table class="table table-hover table-sm align-middle">
-        <thead class="color-thead">
+        <thead class="color-thead" >
           <tr>
-            <th class="align-middle">N° OC</th>
-            <th class="align-middle">Estado de OC</th>
-            <th class="align-middle">Proveedor</th>
-            <th class="align-middle">Fecha Estimada de Entrega</th>
-            <th class="align-middle">N° Tracking</th>
+            <th class="align-middle" style="background-color: #014BAC;">N° OC</th>
+            <th class="align-middle" style="background-color: #014BAC;">Estado de OC</th>
+            <th class="align-middle" style="background-color: #014BAC;">Proveedor</th>
+            <th class="align-middle" style="background-color: #014BAC;">Fecha Estimada de Entrega</th>
+            <th class="align-middle" style="background-color: #014BAC;">N° Tracking</th>
           </tr>
         </thead>
         <tbody>
