--- a/App_LUMINOVA/templates/deposito/insumo_crear.html
+++ b/App_LUMINOVA/templates/deposito/insumo_crear.html
@@ -17,6 +17,11 @@
                         <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Insumo</span>
                     </a>
                 </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:deposito_view' %}">
+                        <i class="bi bi-arrow-left-circle-fill me-2"></i> <span class="ms-2">Volver a Depósito</span>
+                    </a>
+                </li>
                 {# ... otros enlaces del sidebar ... #}
             </ul>
         </div>
