--- a/App_LUMINOVA/templates/produccion/planificacion.html
+++ b/App_LUMINOVA/templates/produccion/planificacion.html
@@ -22,14 +22,14 @@
             <table class="table table-sm table-hover align-middle">
                 <thead class="table-light">
                     <tr>
-                        <th>N° OP</th>
-                        <th>Producto</th>
-                        <th class="text-center">Cant.</th>
-                        <th>Cliente</th>
-                        <th>Asignar Sector</th>
-                        <th>Inicio Plan.</th>
-                        <th>Fin Plan.</th>
-                        <th class="text-center" style="width: 120px;">Acción</th>
+                        <th style="background-color: #014BAC; color: white;">N° OP</th>
+                        <th style="background-color: #014BAC; color: white;">Producto</th>
+                        <th class="text-center" style="background-color: #014BAC; color: white;">Cant.</th>
+                        <th style="background-color: #014BAC; color: white;">Cliente</th>
+                        <th style="background-color: #014BAC; color: white;">Asignar Sector</th>
+                        <th style="background-color: #014BAC; color: white;">Inicio Plan.</th>
+                        <th style="background-color: #014BAC; color: white;">Fin Plan.</th>
+                        <th class="text-center" style="width: 120px; background-color: #014BAC; color: white;">Acción</th>
                     </tr>
                 </thead>
                 <tbody>
