--- a/App_LUMINOVA/templates/produccion/produccion_lista_op.html
+++ b/App_LUMINOVA/templates/produccion/produccion_lista_op.html
@@ -20,15 +20,15 @@
     <table class="table table-striped table-hover align-middle">
         <thead class="table-light ">
             <tr>
-                <th class="color-thead">N° OP</th>
-                <th class="color-thead">OV Origen</th>
-                <th class="color-thead">Producto a Producir</th>
-                <th class="color-thead text-center">Cantidad</th>
-                <th class="color-thead">Cliente Final</th>
-                <th class="color-thead">Fecha Solicitud</th>
-                <th class="color-thead">Estado Actual</th>
-                <th class="color-thead">Sector Asignado</th>
-                <th class="color-thead text-center">Acciones</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">N° OP</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">OV Origen</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Producto a Producir</th>
+                <th class="color-thead text-center" style="background-color: #014BAC; color: white;">Cantidad</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Cliente Final</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Fecha Solicitud</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Estado Actual</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Sector Asignado</th>
+                <th class="color-thead text-center" style="background-color: #014BAC; color: white;">Acciones</th>
             </tr>
         </thead>
         <tbody>
