--- a/App_LUMINOVA/templates/produccion/reportes.html
+++ b/App_LUMINOVA/templates/produccion/reportes.html
@@ -21,13 +21,13 @@
         <table class="table table-striped table-hover">
             <thead class="color-thead"> {# Usando tu clase color-thead #}
                 <tr>
-                    <th class="align-middle color-thead">N° Reporte</th>
-                    <th class="align-middle color-thead">Fecha</th>
-                    <th class="align-middle color-thead">OP Asociada</th>
-                    <th class="align-middle color-thead">Tipo de Problema</th>
-                    <th class="align-middle color-thead">Sector Reporta</th>
-                    <th class="align-middle color-thead">Reportado Por</th>
-                    <th class="align-middle color-thead text-center">Acciones</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">N° Reporte</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Fecha</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">OP Asociada</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Tipo de Problema</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Sector Reporta</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Reportado Por</th>
+                    <th class="align-middle color-thead text-center" style="background-color: #014BAC; color: white;">Acciones</th>
                 </tr>
             </thead>
             <tbody>
