--- a/App_LUMINOVA/templates/ventas/proveedores/proveedor_list.html
+++ b/App_LUMINOVA/templates/ventas/proveedores/proveedor_list.html
@@ -24,11 +24,11 @@
     <table class="table table-striped table-hover align-middle"> {# align-middle para centrar verticalmente el contenido de las celdas #}
         <thead class="table-light">
             <tr>
-                <th class="align-middle color-thead">Nombre</th>
-                <th class="align-middle color-thead">Teléfono</th>
-                <th class="align-middle color-thead">Contacto</th>
-                <th class="align-middle color-thead">Email</th>
-                <th class="text-center align-middle color-thead">Acciones</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Nombre</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Teléfono</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Contacto</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Email</th>
+                <th class="text-center align-middle color-thead" style="background-color: #014BAC; color: white;">Acciones</th>
             </tr>
         </thead>
         <tbody>
